...
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="accounts">Accounts</string>
    <string name="blotter">Blotter</string>
    <string name="currencies">Currencies</string>
    <string name="categories">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="projects">Projects</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
...
    <string name="edit_account">Edit Account</string>
    <string name="add_account">Add account</string>
    <string name="title">Title</string>
    <string name="aliases">Aliases (for search, notification matching)</string>
    <string name="aliases_hint">Can have multiple, one per line</string>
    <string name="payee">Payee</string>
    <string name="currency">Currency</string>
    <string name="trading_currency">Trading currency</string>
...
    <string name="add_transaction">Add Transaction</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="income">Income</string>
...
    <string name="period_to">Period To</string>
    <string name="period_recur">Period Recur</string>
    <string name="preferences">Preferences</string>
    <string name="amount_picker">Amount Picker</string>
    <string name="integer_part_title">Number of digits</string>
    <string name="use_hundredth_title">Use hundredths</string>
    <string name="project">Project</string>
    <string name="select_account">Please select account…</string>
    <string name="select_currency">Please select currency…</string>
    <string name="select_category">Please select category…</string>
    <string name="autocomplete_filter_hint">Start typing…</string>
    <string name="select_project">Please select project…</string>
...
    <string name="loading">Loading…</string>
    <string name="no_transactions">No transactions</string>
    <string name="no_categories">No categories</string>
    <string name="no_currencies">No currencies</string>
    <string name="no_projects">No projects</string>
...
    <string name="move_go_to_marker">Go to marker</string>
    <string name="tap_location">Tap \'My location\' marker to manually adjust location</string>
    <string name="note">Note</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
...
    <string name="select_report">Please select report…</string>
    <string name="overall">Overall</string>
    <string name="report_by_period">By Period</string>
    <string name="report_by_period_summary">Transactions report by period</string>
    <string name="report_by_category">By Category</string>
    <string name="report_by_category_summary">Transactions report by category</string>
    <string name="report_by_location">By Location</string>
...
    <string name="report_by_account_by_period">By Account / Period</string>
    <string name="report_by_account_by_period_summary">Transactions report by account and period</string>
    <string name="report_by_category_by_period">By Category / Period</string>
    <string name="report_by_category_by_period_summary">Transactions report by category and period</string>
    <string name="report_by_location_by_period">By Location / Period</string>
...
    <string-array name="account_types">
        <item>Bank</item>
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
...
    <string name="current_location">Current location</string>
    <string name="protection">Protection</string>
    <string name="transaction_screen">New transaction screen</string>
    <string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
    <string name="screen_layout">Screen layout</string>
...
    <string name="report_include_no_filter">Include No &lt;Filter&gt;</string>
    <string name="report_include_no_filter_summary">Include non classified transactions to reports filters lists (No category, No Project and Unknown Location)</string>
    <string name="report_reference_month">Reference Month</string>
    <string name="report_reference_month_summary">Define the Reference Month that represents the end of the report period</string>
    <string name="report_aggregate_unit">Aggregate Unit</string>
    <string name="report_aggregate_unit_summary">Select the aggregate unit of report</string>
    <string-array name="report_aggregate_unit_entities">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Fiscal year</item>
...
        <item>3 months ago</item>
        <item>Last month</item>
        <item>Current month</item>
        <item>Next month</item>
        <item>3 months later</item>
        <item>6 months later</item>
    </string-array>
    <string name="report_reference_period">Period of Reference</string>
    <string name="report_reference_period_summary">Define the period of reference (number of months) to be considered when opening report charts</string>
    <string-array name="report_reference_period_entities">
...
        <item>6 months</item>
        <item>9 months</item>
        <item>1 year</item>
        <item>2 years</item>
        <item>5 years</item>
...
        <item>all data</item>
    </string-array>
    <string name="report_reference_currency">Reference Currency</string>
    <string name="report_reference_currency_summary">Define the reference currency to be considered when request data for report charts</string>
    <string name="report_last_n_months">Last $n months</string>
...
    <string name="show_picture_summary">Show \'Take picture\' box</string>
    <string name="payees">Payees</string>
    <string name="report_by_payee">By Payee</string>
    <string name="report_by_payee_summary">Transactions report by payee</string>
    <string name="report_by_payee_by_period">By Payee / Period</string>
...
    <string name="quick_menu_split_transactions_summary">Shortcut for changing split transaction status</string>

    <string name="split_entity_in_child">Split transactions payee/location in child</string>
    <string name="split_entity_in_child_summary">Track payee/location in split child instead of split summary.
        Old transactions with payee/location will still show selector for edit.</string>
...
    <string name="pin_protection_lock_transaction_summary">Lock \'New transaction\' and \'New transfer\' screens by PIN</string>

    <string name="split">[Split…]</string>
    <string name="split_transaction">[Split-Transaction]</string>
    <string name="split_transfer">[Split-Transfer]</string>
...

    <string name="account_by_currency">All %s Accounts</string>
    <string name="budget_type_saving">Saving</string>
    <string name="budget_type_saving_summary">Budget with a goal to save money</string>
    <string name="pin_protection_haptic_feedback">Haptic feedback</string>
...
