<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<ListView android:id="@android:id/list" android:layout_width="match_parent"
		android:layout_weight="1" android:layout_height="match_parent">
	</ListView>
	<TextView android:id="@id/android:empty" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:gravity="center" android:text="@string/no_budgets" />
	<LinearLayout style="@style/BottomBar" android:id="@+id/bottom_bar">
		<ImageButton android:id="@+id/bAdd"
			style="@style/BottomBarButton"
			android:src="@drawable/actionbar_add_big" />
		<ImageButton android:id="@+id/bFilter"
			style="@style/BottomBarButton"
			android:src="@drawable/actionbar_filter" />
		<ImageButton android:id="@+id/bSortOrder"
			style="@style/BottomBarButton"
			android:src="@drawable/sort" />
        <include layout="@layout/total_text"/>
	</LinearLayout>
</LinearLayout>
