...
				  a:layout_height="wrap_content"
				  a:layout_gravity="center_vertical"
				  style="@style/ListButton"
				  a:background="@drawable/btn_toggle_filter"/>

	<AutoCompleteTextView
			a:id="@+id/autocomplete_filter"
			a:imeOptions="flagNoExtractUi"
			a:layout_width="match_parent"
			a:layout_height="wrap_content"
			a:hint="@string/autocomplete_filter_hint"
			a:visibility="gone"
			a:completionThreshold="1"
...
				  a:id="@+id/list_node_row">

		<RelativeLayout a:layout_width="wrap_content"
						a:layout_height="wrap_content" a:layout_marginLeft="8dip"
						a:layout_marginTop="3dip" a:layout_marginBottom="3dip"
						a:layout_weight="1" a:duplicateParentState="true">
			<TextView a:id="@+id/label" a:layout_width="wrap_content"
					  a:layout_height="wrap_content" a:singleLine="true"
					  style="@style/Caption"
					  a:ellipsize="marquee" a:fadingEdge="horizontal"
					  a:duplicateParentState="true"/>
			<TextView a:id="@+id/data" a:layout_width="wrap_content"
					  a:layout_height="wrap_content" a:layout_below="@+id/label"
...
